--- a/resources/Storyboard.storyboard
+++ b/resources/Storyboard.storyboard
@@ -53,6 +53,16 @@
                                             <action selector="iPodNext" destination="Fwb-c8-22I" eventType="touchUpInside" id="K2x-BD-FsU"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="dVz-4c-dxA">
+                                        <rect key="frame" x="279" y="10" width="35" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" title="Load">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <segue destination="g74-a5-Est" kind="modal" id="jN1-NT-xWr"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="0.97999999999999998" colorSpace="calibratedWhite"/>
                             </view>
@@ -217,6 +227,7 @@
                         <color key="tintColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <navigationItem key="navigationItem" id="JS4-QJ-xUA"/>
+                    <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="ipodPlayButton" destination="m9M-Uv-BVM" id="Mcm-y4-amZ"/>
                         <outlet property="playingLabel" destination="zPT-HY-W6c" id="4B0-PL-I7W"/>
@@ -258,6 +269,58 @@
             </objects>
             <point key="canvasLocation" x="108" y="722"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="atT-D4-pnV">
+            <objects>
+                <navigationController definesPresentationContext="YES" id="g74-a5-Est" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="zKI-K9-G0w">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="9AY-zd-2O7" kind="relationship" relationship="rootViewController" id="B2U-Yb-6H5"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0UJ-l0-TlE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="538" y="722"/>
+        </scene>
+        <!--Background Controller - Select Playlist-->
+        <scene sceneID="jBl-uQ-yI1">
+            <objects>
+                <tableViewController id="9AY-zd-2O7" customClass="BackgroundController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="gOG-Zz-Gxz">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <color key="tintColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="pBb-Ni-i95">
+                                <rect key="frame" x="0.0" y="119" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="pBb-Ni-i95" id="SLN-cU-p9J">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="9AY-zd-2O7" id="heM-gD-X6m"/>
+                            <outlet property="delegate" destination="9AY-zd-2O7" id="6Pu-FC-req"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Select Playlist" id="Jtk-m9-Uc7">
+                        <barButtonItem key="rightBarButtonItem" title="Done" id="HVz-lN-qBP">
+                            <connections>
+                                <action selector="dismiss" destination="9AY-zd-2O7" id="Uxq-vt-5ZT"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4Jp-qJ-ckQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="948" y="722"/>
+        </scene>
         <!--Edit Controller-->
         <scene sceneID="BBH-1f-24n">
             <objects>
@@ -278,7 +341,7 @@
                                 </connections>
                             </button>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="8ag-4V-6aI">
-                                <rect key="frame" x="0.0" y="84" width="320" height="285"/>
+                                <rect key="frame" x="0.0" y="84" width="320" height="484"/>
                                 <autoresizingMask key="autoresizingMask" heightSizable="YES"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" id="sNQ-lP-HOK">
@@ -470,30 +533,13 @@
                                     </view>
                                 </subviews>
                             </scrollView>
-                            <pickerView contentMode="scaleToFill" id="G8L-k4-3rn">
-                                <rect key="frame" x="0.0" y="406" width="320" height="162"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </pickerView>
                             <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo.png" id="zWR-n0-b5v">
                                 <rect key="frame" x="100" y="31" width="120" height="45"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Playlist" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="gPe-VP-3EM">
-                                <rect key="frame" x="20" y="377" width="60" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <view contentMode="scaleToFill" id="ioL-XF-hj5" userLabel="TopLineView">
                                 <rect key="frame" x="0.0" y="84" width="320" height="1"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
-                            <view contentMode="scaleToFill" id="3rC-sL-fqe" userLabel="BottomLineView">
-                                <rect key="frame" x="0.0" y="369" width="320" height="1"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                         </subviews>
@@ -508,7 +554,6 @@
                         <outlet property="artistLabel4" destination="2jT-CS-epi" id="dVQ-Z9-Wer"/>
                         <outlet property="editScrollView" destination="8ag-4V-6aI" id="Rtm-ye-e2f"/>
                         <outlet property="editView" destination="sNQ-lP-HOK" id="3Vd-Y3-SXC"/>
-                        <outlet property="playlistPicker" destination="G8L-k4-3rn" id="Ulz-ob-VyI"/>
                         <outlet property="titleLabel0" destination="Nii-cs-a7j" id="bp1-kx-Ib3"/>
                         <outlet property="titleLabel1" destination="KbB-HQ-3Ix" id="MsJ-Sq-2wJ"/>
                         <outlet property="titleLabel2" destination="CP1-Eu-hpD" id="Ti3-NC-zBg"/>
