--- a/Resources/Launch Screen.storyboard
+++ b/Resources/Launch Screen.storyboard
@@ -15,22 +15,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen-Logo" translatesAutoresizingMaskIntoConstraints="NO" id="1j3-Ha-dHo" userLabel="Logo">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="1j3-Ha-dHo" userLabel="Logo">
                                 <rect key="frame" x="70" y="192" width="180" height="180"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="1j3-Ha-dHo" secondAttribute="height" multiplier="1:1" id="ElL-Rx-QcP"/>
                                 </constraints>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen-Name" translatesAutoresizingMaskIntoConstraints="NO" id="gUh-ii-bJs" userLabel="Name">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Sting Pad" translatesAutoresizingMaskIntoConstraints="NO" id="gUh-ii-bJs" userLabel="Name">
                                 <rect key="frame" x="45" y="65" width="230" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="gUh-ii-bJs" secondAttribute="height" multiplier="115:24" id="7Gb-gV-JC0"/>
                                 </constraints>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen-pixlwave" translatesAutoresizingMaskIntoConstraints="NO" id="Moi-Vx-IY8" userLabel="pixlwave">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pixlwave" translatesAutoresizingMaskIntoConstraints="NO" id="Moi-Vx-IY8" userLabel="pixlwave">
                                 <rect key="frame" x="182" y="547" width="127" height="14"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen-Bee" translatesAutoresizingMaskIntoConstraints="NO" id="25f-Wj-RGF" userLabel="Bee">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Bee" translatesAutoresizingMaskIntoConstraints="NO" id="25f-Wj-RGF" userLabel="Bee">
                                 <rect key="frame" x="251" y="467" width="52" height="64"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="25f-Wj-RGF" secondAttribute="height" multiplier="13:16" id="cAV-54-0Ep"/>
@@ -62,10 +62,10 @@
         </scene>
     </scenes>
     <resources>
-        <image name="LaunchScreen-Bee" width="306" height="378"/>
-        <image name="LaunchScreen-Logo" width="174" height="171"/>
-        <image name="LaunchScreen-Name" width="230" height="48"/>
-        <image name="LaunchScreen-pixlwave" width="127" height="14"/>
+        <image name="Bee" width="306" height="378"/>
+        <image name="Logo" width="174" height="171"/>
+        <image name="Sting Pad" width="230" height="48"/>
+        <image name="pixlwave" width="127" height="14"/>
     </resources>
     <color key="tintColor" name="Tint Color"/>
 </document>
